--- a/src/pages/courseInfoStyle.css
+++ b/src/pages/courseInfoStyle.css
@@ -1,18 +1,27 @@
-.Button {
-  margin-top: 20px;
+.picture {
+  margin-bottom: 30px;
+}
+.Button_Change {
+  margin-top: 10px;
   size: "sm";
+  margin-right: 12.5px;
 }
 
-.Container {
-  width: 700px;
-  margin-top: 50px;
-  align-self: center;
+.cardSize {
+  width: 525px;
+  margin-bottom: 40px;
+  margin-top: 10px;
 }
 
-.form-group {
-  max-width: 300px;
+.container {
+  max-width: 100%;
 }
 
 .form-control {
-  margin-bottom: 10px;
+  max-width: 100%;
+}
+
+.form {
+  width: 500px;
+  margin-left: 5px;
 }
